Update and rename add_host_hello_world.yml to add_host_print_hostname.yml

--- a/add_host_print_hostname.yml
+++ b/add_host_print_hostname.yml
@@ -12,6 +12,6 @@
   gather_facts: true
 
   tasks:
-    - name: Hello Message
+    - name: Print hostname
       ansible.builtin.debug:
         msg: "{{ ansible_hostname }}"
